# Alpha_Engine

./: .gitignore  3Drotate.cpp  3Drotate.vcxproj  3Drotate.vcxproj.filters  Basical_Type.cpp  Basical_Type.h  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  LICENSE  README.md
ALPHA_Engine/: ALPHA_Engine  ALPHA_Engine.cpp  ALPHA_Engine.h  CMakeCheckPlatform.txt  CMakeCloneDependencies.txt  CMakeColorsOutput.txt  CMakeCopyAssets.txt  CMakeFunctions.txt  CMakeIncludeHeaders.txt  CMakeLists.txt  CMakeVariables.txt
ALPHA_Engine/Assets/Models/: Sci-Fi_Football.fbx  SeparateTest.fbx  TestModel.fbx  cube.fbx
ALPHA_Engine/Assets/Models/Primitives/: Plane.fbx
ALPHA_Engine/Build_Files/: CMakeLists.txt  CMakeVariables.txt  CloneDependencies.txt  MyScript.cpp  MyScript.h
ALPHA_Engine/Dependency/assimp-5.4.3/: CMakeLists.txt
ALPHA_Engine/Engine/: AABB.cpp  AABB.h  ALPHA_Engine.cpp  AdditionalMath.cpp  AdditionalMath.h  Alghoritms.cpp  BVH_Tree.cpp  BVH_Tree.h  BaseConfig.h  Basical_Type.cpp  Basical_Type.h  Binds.cpp  Binds.h  CMakeLists.txt  Camera.cpp  Camera.h  Collision.cpp  Collision.h  EngineConfig.h  Geometry.cpp  Geometry.h  Graphic_Engine.cpp  Graphic_Engine.h  Material.cpp  Material.h  Matrix.cpp  Matrix.h  MemoryManager.h  Mesh.cpp  Mesh.h  ModuleList.h  Object.cpp  Object.h  Plane.h  SceneManager.cpp  SceneManager.h  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h  (+7 more)
ALPHA_Engine/Engine/Anomaly/WinManager/: WinManagerConfig.h  Window.cpp  Window.h  WindowsManager.cpp  WindowsManager.h
ALPHA_Engine/Engine/AnomalyEngine/: AnomalyConfig.h  Binder.cpp  Binder.h  CMakeLists.txt  Module.cfg  RenderEngine.cpp  RenderEngine.h
ALPHA_Engine/Engine/AnomalyEngine/AnomalyEngine/: RenderEngine.cpp
ALPHA_Engine/Engine/AnomalyEngine/Buffers/: CamerasBuffer.cpp  CamerasBuffer.h  (+7 more)
ALPHA_Engine/Engine/AxisEngine/: AxisEngine.cpp  AxisEngine.h  CMakeLists.txt  Module.cfg
ALPHA_Engine/Engine/Binds/: Binds.cpp  Binds.h  BindsConfig.h  GeneralSensors.h  InputSystem.cpp  InputSystem.h
ALPHA_Engine/Engine/BindsEngine/: Binds.cpp  Binds.h  BindsBuffer.cpp  BindsBuffer.h  BindsEngineConfig.h  CMakeLists.txt  InputSystem.cpp  Module.cfg
ALPHA_Engine/Engine/Core/: CMakeLists.txt  CoreConfig.h  Factory.cpp  Factory.h  Object.cpp  Object.h  Tag.cpp  Tag.h  Timer.cpp  Timer.h  World.cpp  World.h
ALPHA_Engine/Engine/Graphics_Engine/: GraphicsEngineConfig.h  Graphics_Engine.cpp  Graphics_Engine.h
ALPHA_Engine/Engine/Importer/: SceneImporter.cpp  SceneImporter.h
ALPHA_Engine/Engine/Logger/: ConsoleLogger.cpp  ConsoleLogger.h  ILogger.h  Logger.cpp  Logger.h
ALPHA_Engine/Engine/Modules/: BoxCollider.cpp  BoxCollider.h  Camera.cpp  Camera.h  Collider.cpp  Collider.h  ColliderPresets.cpp  ColliderPresets.h  DebugMesh.cpp  DebugMesh.h  Geometry.cpp  Geometry.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshCollider.cpp  MeshCollider.h  Module.cpp  Module.h  MovableModule.cpp  MovableModule.h  Physics.cpp  Physics.h  Transform.cpp  Transform.h
ALPHA_Engine/Engine/Render/: AnomalyConfig.h  CMakeLists.txt  RenderConfig.h
ALPHA_Engine/Engine/ShadersProgram/: ColliderWireframeShader.cpp  ColliderWireframeShader.h  CubeMapShader.cpp  CubeMapShader.h  OpaqueShader.cpp  OpaqueShader.h  PathShader.cpp  PathShader.h  ShaderProgram.cpp  ShaderProgram.h
ALPHA_Engine/Engine/SonarEngine/: CMakeLists.txt
ALPHA_Engine/Engine/UserScriptsRegister/: CMakeLists.txt  Module.cfg  Registry.cpp  Registry.h  UserScript.cpp  UserScript.h  UserScriptConfig.h  UserScriptsBuffer.cpp  UserScriptsBuffer.h
ALPHA_Engine/Engine/WindowsManager/: CMakeLists.txt  Module.cfg  Window.cpp  Window.h  WindowsBuffer.cpp  WindowsBuffer.h  WindowsManager.cpp  WindowsManager.h  WindowsManagerConfig.h
ALPHA_Engine/Engine_Assets/Models/: text.fbx
ALPHA_Engine/Examples/: CMakeLists.txt
ALPHA_Engine/Examples/SimpleGame/: CMakeCloneDependencies.txt  CMakeLists.txt  Modules.cpp  Modules.generated.h  Modules.h  MyScript.cpp  MyScript.generated.h  MyScript.h
ALPHA_Engine/Examples/SimpleModule/: CMakeLists.txt  Module.cfg  MyComponent.h  MyModule.cpp  MyModule.h  MyModuleData.cpp  MyModuleData.h  Registration.cpp
ALPHA_Engine/GLFW/: glfw3.lib  glfw3dll.lib
ALPHA_Engine/Game/: GameModels.cpp  GameModels.h
ALPHA_Engine/Models/Primitives/: Cube.fbx  Sphere.fbx  Symbol.fbx
ALPHA_Engine/STB/: stb_include.h
ALPHA_Engine/Shaders/BaseFragmentShaders/: FragmentShader.txt
ALPHA_Engine/Shaders/BaseVertexShaders/: VertexShader.txt  WireframeVertexShader.txt
ALPHA_Engine/Shaders/ColliderWireframeShaders/: FragmentShader.txt  VertexShader.txt
ALPHA_Engine/Shaders/CubeMapShader/: FragmentShader.txt  VertexShader.txt
ALPHA_Engine/Shaders/PathShader/: VertexShader.txt
ALPHA_Engine/Tests/: CMakeLists.txt
ALPHA_Engine/Tests/CoreTests/: CMakeLists.txt  Modules.cpp  Modules.h  TestCore.cpp
ALPHA_Engine/Utility/AlphaConfigurator/: CMakeLists.txt  Configurator.cpp  Configurator.h  File.cpp  File.h  MacrosGenerator.cpp  MacrosGenerator.h  SystemRegistrator.cpp  SystemRegistrator.h
ALPHA_Engine/Utility/EngineDataCollector/: CMakeLists.txt  Collector.cpp  Parser.cpp  Parser.h
ALPHA_Engine/assimp/lib/: assimp-vc143-mt.lib  assimp-vc143-mtd.exp
ALPHA_Engine/bitsery/: CMakeLists.txt
ALPHA_Engine/bitsery/tests/: CMakeLists.txt  data_operations.cpp  serialization_container.cpp  serialization_ext_entropy.cpp  serialization_objects.cpp  serialization_test_utils.h  serialization_text.cpp  serialization_values.cpp
ALPHA_Engine/protobuf-21.6/: CMakeLists.txt
ALPHA_Engine/protobuf-21.6/lib/: libprotobuf-lite.lib
ALPHA_Engine/protobuf-21.6/protofiles/: Vector3.proto  scene.proto  test.pb.cc  test.pb.h  test.proto
ALPHA_Engine_GUI/: CMakeLists.txt  mainwindow.h
Game/Game/: ALPHA_Engine.lib  BaseConfig.h  CMakeLists.txt  EngineConfig.h  EngineDefines.h  ModuleList.h
Game/Game/Core/: Object.h  World.h
Game/Game/GameFolder/: ALPHA_Engine.h  Game.cpp  Game.h
Game/Game/UserScriptsRegister/: Registry.cpp  Registry.h  UserScript.cpp  UserScript.h
Sandbox/Debug/Game/: CMakeCache.txt  CMakeLists.txt  Game
(+348 files in other folders)
